--- a/config/tusimple_lanenet.yaml
+++ b/config/tusimple_lanenet.yaml
@@ -24,12 +24,12 @@ AUG:
         CONTRAST_JITTER_RATIO: 0.5
         SATURATION_JITTER_RATIO: 0.5
 DATASET:
-    DATA_DIR: 'REPO_ROOT_PATH/data/training_data_example/'
+    DATA_DIR: '/home/erdos/workspace/pylot/data_town3_5/lanenet'
     IMAGE_TYPE: 'rgb'  # choice rgb or rgba
     NUM_CLASSES: 2
-    TEST_FILE_LIST: 'REPO_ROOT_PATH/data/training_data_example/test.txt'
-    TRAIN_FILE_LIST: 'REPO_ROOT_PATH/data/training_data_example/train.txt'
-    VAL_FILE_LIST: 'REPO_ROOT_PATH/data/training_data_example/val.txt'
+    TEST_FILE_LIST: '/home/erdos/workspace/pylot/data_town3_5/lanenet/test.txt'
+    TRAIN_FILE_LIST: '/home/erdos/workspace/pylot/data_town3_5/lanenet/train.txt'
+    VAL_FILE_LIST: '/home/erdos/workspace/pylot/data_town3_5/lanenet/val.txt'
     IGNORE_INDEX: 255
     PADDING_VALUE: [127.5, 127.5, 127.5]
     MEAN_VALUE: [0.5, 0.5, 0.5]
@@ -49,16 +49,16 @@ MODEL:
 TEST:
     TEST_MODEL: 'model/cityscapes/final'
 TRAIN:
-    MODEL_SAVE_DIR: 'model/tusimple/'
-    TBOARD_SAVE_DIR: 'tboard/tusimple/'
+    MODEL_SAVE_DIR: 'model/4_5_carla_t35/'
+    TBOARD_SAVE_DIR: 'tboard/4_5_carla_t35/'
     MODEL_PARAMS_CONFIG_FILE_NAME: "model_train_config.json"
     RESTORE_FROM_SNAPSHOT:
         ENABLE: False
-        SNAPSHOT_PATH: ''
-    SNAPSHOT_EPOCH: 8
+        SNAPSHOT_PATH: 'model/3_28_carla_t12/bisenetv2_lanenet/tusimple_train_miou=0.7979.ckpt-4670'
+    SNAPSHOT_EPOCH: 10
     BATCH_SIZE: 32
     VAL_BATCH_SIZE: 4
-    EPOCH_NUMS: 905
+    EPOCH_NUMS: 5000
     WARM_UP:
         ENABLE: True
         EPOCH_NUMS: 8
@@ -68,13 +68,13 @@ TRAIN:
         ENABLE: True
         EPOCH: 1
     MULTI_GPU:
-        ENABLE: True
-        GPU_DEVICES: ['0', '1']
+        ENABLE: False
+        GPU_DEVICES: ['0']
         CHIEF_DEVICE_INDEX: 0
 SOLVER:
     LR: 0.001
     LR_POLICY: 'poly'
-    LR_POLYNOMIAL_POWER: 0.9
+    LR_POLYNOMIAL_POWER: 0.6
     OPTIMIZER: 'sgd'
     MOMENTUM: 0.9
     WEIGHT_DECAY: 0.0005
@@ -89,8 +89,8 @@ GPU:
     TF_ALLOW_GROWTH: True
 POSTPROCESS:
     MIN_AREA_THRESHOLD: 100
-    DBSCAN_EPS: 0.35
-    DBSCAN_MIN_SAMPLES: 1000
+    DBSCAN_EPS: 0.3 #.3
+    DBSCAN_MIN_SAMPLES: 250 #250
 LOG:
     SAVE_DIR: './log'
     LEVEL: INFO
